--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "𝐔𝐧𝐊𝐧 - 𝐁𝐎𝐓",
+    "name": "SIA-BOT",
     "description": "Un chatbot automatizado para WhatsApp basado en Node.js, que permite realizar múltiples funciones y personalizaciones en la plataforma.",
-    "repository": "https://github.com/BrunoSobrino/𝐔𝐧𝐊𝐧 - 𝐁𝐎𝐓",
+    "repository": "https://github.com/BrunoSobrino/SIA-BOT",
     "logo": "https://cdn.russellxz.click/494efd47.jpeg"
   }
